<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="148dp"
        android:onClick="playAgain"
        android:text="Play again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="Spiele nochmal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="371dp"
        android:layout_height="371dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/board"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgainButton"
        app:layout_constraintVertical_bias="0.609">

        <ImageView
            android:id="@+id/imageView00"
            android:layout_width="122dp"
            android:layout_height="123dp"
            android:layout_margin="1dp"
            android:onClick="playerClick00"
            android:tag="0" />

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="122dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="1" />

        <ImageView
            android:id="@+id/imageView02"
            android:layout_width="122dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="2" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="122dp"
            android:layout_height="122dp"
            android:onClick="playerClick00"
            android:tag="3" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="123dp"
            android:layout_height="123dp"
            android:onClick="playerClick00"
            android:tag="4" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="124dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="5" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="122dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="6" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="123dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="7" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="124dp"
            android:layout_height="121dp"
            android:onClick="playerClick00"
            android:tag="8" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>