...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageButton
        android:id="@+id/tikTakToImageView"
        android:layout_width="101dp"
        android:layout_height="154dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
